--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Console Finances</title>
 </head>
 <body>
+    <div id="finances"></div>
     <script src="./js/functions.js"></script>
 </body>
 </html>
